update dependencies (conda)
- add mne-nirs to environment.yml

--- a/environment.yml
+++ b/environment.yml
@@ -10,6 +10,7 @@ dependencies:
   - ipympl
   - statsmodels
   - mne
+  - mne-nirs
   - mne-qt-browser
   - scikit-learn
   # - mesalib # probably already installed 
