--- a/data/Multi-object Tracking/sub-1/ses-2/sub-1_ses-2_config.toml
+++ b/data/Multi-object Tracking/sub-1/ses-2/sub-1_ses-2_config.toml
@@ -4,6 +4,9 @@ WAVELENGTHS_PICKED = [774, 865] # [774, 817, 865, 892]
 # Number of probes (optional)
 N_PROBES = 7
 
+# Number of hemispheres from which data is collected
+N_HEMISPHERES = 1
+
 # Source-Detector pairs (all), in Hexadecimal
 # ['S21_D21', 'S21_D22', 'S21_D27', 'S21_D28', 'S21_D29', 'S21_D2B', 'S21_D2C', 'S22_D21', 'S22_D22', 'S22_D27', 'S22_D28', 'S22_D29', 'S22_D2B', 'S22_D2C', 'S27_D21', 'S27_D22', 'S27_D27', 'S27_D28', 'S27_D29', 'S27_D2B', 'S27_D2C', 'S28_D21', 'S28_D22', 'S28_D27', 'S28_D28', 'S28_D29', 'S28_D2B', 'S28_D2C', 'S29_D21', 'S29_D22', 'S29_D27', 'S29_D28', 'S29_D29', 'S29_D2B', 'S29_D2C', 'S2B_D21', 'S2B_D22', 'S2B_D27', 'S2B_D28', 'S2B_D29', 'S2B_D2B', 'S2B_D2C', 'S2C_D21', 'S2C_D22', 'S2C_D27', 'S2C_D28', 'S2C_D29', 'S2C_D2B', 'S2C_D2C'] # Hexadecimal
 # ['S33_D33', 'S33_D34', 'S33_D39', 'S33_D40', 'S33_D41', 'S33_D43', 'S33_D44', 'S34_D33', 'S34_D34', 'S34_D39', 'S34_D40', 'S34_D41', 'S34_D43', 'S34_D44', 'S39_D33', 'S39_D34', 'S39_D39', 'S39_D40', 'S39_D41', 'S39_D43', 'S39_D44', 'S40_D33', 'S40_D34', 'S40_D39', 'S40_D40', 'S40_D41', 'S40_D43', 'S40_D44', 'S41_D33', 'S41_D34', 'S41_D39', 'S41_D40', 'S41_D41', 'S41_D43', 'S41_D44', 'S43_D33', 'S43_D34', 'S43_D39', 'S43_D40', 'S43_D41', 'S43_D43', 'S43_D44', 'S44_D33', 'S44_D34', 'S44_D39', 'S44_D40', 'S44_D41', 'S44_D43', 'S44_D44'] # Decimal
