--- a/data/Multi-object Tracking/sub-1/ses-1/sub-1_ses-1_config.toml
+++ b/data/Multi-object Tracking/sub-1/ses-1/sub-1_ses-1_config.toml
@@ -28,6 +28,10 @@ S_D = [
 # Unused Channels
 CH_UNUSED = [3, 7, 11]
 
+# Coordinate frame of the optode locations.
+# Valid coordinate frames are 'meg', 'mri', 'mri_voxel', 'head', 'mri_tal', 'ras', 'fs_tal', 'ctf_head', 'ctf_meg', 'unknown'.
+COORD_FRAME = 'mri'
+
 # Time of start of experiment
 T_EXP_START = 0 # -0.1
 
