update NIRS class
- remove redundant members
- use better variable names
- fix time mismatch issue
-- was due to unexpected additional channels in data
-- add warning if unexpected number of channels
-- add assertions after dropping channels

--- a/data/Multi-object Tracking/sub-1/ses-1/sub-1_ses-1_config.toml
+++ b/data/Multi-object Tracking/sub-1/ses-1/sub-1_ses-1_config.toml
@@ -31,7 +31,7 @@ S_D = [
 ]
 
 # Unused Channels
-CH_UNUSED = [3, 7, 11]
+S_D_UNUSED = [3, 7, 11]
 
 # Coordinate frame of the optode locations.
 # Valid coordinate frames are 'meg', 'mri', 'mri_voxel', 'head', 'mri_tal', 'ras', 'fs_tal', 'ctf_head', 'ctf_meg', 'unknown'.
