--- a/data/Multi-object Tracking/sub-1/ses-2/sub-1_ses-2_config.toml
+++ b/data/Multi-object Tracking/sub-1/ses-2/sub-1_ses-2_config.toml
@@ -74,6 +74,9 @@ S_D_UNUSED = []
 # Valid coordinate frames are 'meg', 'mri', 'mri_voxel', 'head', 'mri_tal', 'ras', 'fs_tal', 'ctf_head', 'ctf_meg', 'unknown'.
 COORD_FRAME = 'unknown'
 
+# Head Size
+HEAD_SIZE = 0.15
+
 # Time of start of experiment
 T_EXP_START = 0 # -0.1
 
