--- a/data/Multi-object Tracking/sub-1/ses-1/sub-1_ses-1_config.toml
+++ b/data/Multi-object Tracking/sub-1/ses-1/sub-1_ses-1_config.toml
@@ -37,8 +37,9 @@ S_D_UNUSED = [3, 7, 11]
 # Valid coordinate frames are 'meg', 'mri', 'mri_voxel', 'head', 'mri_tal', 'ras', 'fs_tal', 'ctf_head', 'ctf_meg', 'unknown'.
 COORD_FRAME = 'mri'
 
-# Head Size
-HEAD_SIZE = 0.15
+# Head Size (radius), in m
+# < 0.1262
+HEAD_SIZE = 0.095
 
 # Time of start of experiment
 T_EXP_START = 0 # -0.1
